# movie-library

./: .eslintignore  .eslintrc.json  .gitignore  README.md  jsconfig.json  package-lock.json  package.json
docs/: args.gn  browserAudioVideoSupport.md  chromium.patch  chromiumCustomBuild.md  localFileBrowserSecurity.md
src/: config.example.js  configure.html  custom.example.js  movieLibrary.html  playerScripts.html  rename.html  rename2.html
src/assets/: configure.js  movieLibrary.css  movieLibrary.js  playerScripts.js  rename.js  rename2.js  test.ass  types.d.ts
src/assets/lib/: diffString.js  jsconfig.json
src/assets/lib/libass-wasm-4.1.0/: subtitles-octopus.js
tools/: .eslintrc.json  bumpworthy.comDownloader.js  bundle.js  compareMovieNfoNames.js  compareNfoNames.js  compareTVNfoNames.js  configure.js  createRandomPlaylist.js  createRandomPlaylist.ts  ffprobe.d.ts  genBumpers.zsh  jsconfig.json  tvdbProxyServer.js
